--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <p>&copy; 2025 Harun Yildirim. Alle Rechte vorbehalten.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
